--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,8 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:2.6.1"
     implementation "com.google.code.gson:gson:2.8.6"
 
+    implementation 'com.readystatesoftware.chuck:library:1.1.0'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
