- rbs sorted request

--- a/rbs/build.gradle
+++ b/rbs/build.gradle
@@ -48,6 +48,8 @@ dependencies {
     // Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
 
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.1'
+
     // Network
     implementation "com.squareup.okhttp3:okhttp:5.0.0-alpha.2"
     implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2"
