--- a/rio/build.gradle
+++ b/rio/build.gradle
@@ -53,6 +53,9 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
     implementation "com.google.code.gson:gson:2.8.9"
 
+    // Jackson
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.1'
+
     // Firebase
     implementation 'com.google.firebase:firebase-auth:21.0.1'
     implementation 'com.google.firebase:firebase-firestore:24.0.0'
