--- a/rio/build.gradle
+++ b/rio/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2"
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    implementation "com.squareup.retrofit2:converter-scalars:2.9.0"
     implementation "com.google.code.gson:gson:2.9.0"
 
     // Firebase
