--- a/rio/build.gradle
+++ b/rio/build.gradle
@@ -41,7 +41,7 @@ dependencies {
     implementation 'com.auth0.android:jwtdecode:2.0.1'
 
     // Coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
 
     // Network
     implementation "com.squareup.okhttp3:okhttp:5.0.0-alpha.2"
@@ -51,11 +51,13 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-scalars:2.9.0"
     implementation "com.google.code.gson:gson:2.9.0"
 
+    implementation "androidx.security:security-crypto:1.1.0-alpha04"
+
     // Firebase
     implementation 'com.google.firebase:firebase-auth:21.1.0'
-    implementation 'com.google.firebase:firebase-firestore:24.4.0'
+    implementation 'com.google.firebase:firebase-firestore:24.4.1'
 
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
